2006-03-23 CTAF <>
	* ct-installconf : defaut interface: conread
	* ct-profile : default for zprompt: ctaf
	* ct-repo : relocate share/repos to perso/repos
	* ct-ssh : relocate share/ssh to perso/ssh
	* global : move all personnal file to .ctafconf/perso
	* global : remove .ctafconf/share (wallpaper, mine goes in etc)
	* emacs : big cleanup
	* emacs : invert C-x b and C-x C-b
	* emacs : recall macro : M-s

2006-03-22 CTAF <>
	* alias : cf => conkeror (firefox which use only the kbd)
	* tcshrc : cleanup, speedup
	* emacs : C-return : selection box mode
	* emacs : F6, S-F6, C-F6, toggle bookmark, previous, next
	* emacs : M-F6, M-C-F6 : next-mark, prev-mark
	* SVN : the project is hosted on sf.net !!!
	* emacs.bm.el : add empty line at the end of file

2006-03-19 CTAF <>
	* ksh.tcsh.zsh.bash : some cleanup
	* ksh.tcsh.zsh.bash : add motd
	* fluxbox : ctrl+alt+m togglemaximize
	* alias : autodetected thunderbird and firefox path for ff and tn
	* alias : psa and psu for ps -ax and ps -aux

2006-03-02 CTAF <>
	* alias : add alias lg => ls | grep
	* emacs : shift-left,shift-right prev/next buffer, F1 help

2006-02-10 CTAF <>
	* alias : cleanup, add wgetr_localhtml, add todo
	* emacs : cleanup

2006-02-08 CTAF <>
	* emacs : autoload python-mode.el

2006-01-30 -- 0.1.0-rc3
	* ct-socks : bug showing the anc pass
	* ct-install : bug with fluxbox

2006-01-24  CTAF <>
	* shfunction : rpurge_clean to remove all .o

2006-01-20  CTAF <>
	* emacs : key bindings, compilation

2006-01-19  CTAF <>
	* emacs : key bindings, electricbuffer, bubblebuffer

2006-01-16  CTAF <>
	* shfunctions : rpurge_cvs, rpurge_svn
	* emacs : emacs add ECB,CEDET,ILISP, lots of .el file
	* emacs : split emacs config file
	* emacs : handle error in .emacs

15/01/2005
- mod : emacs (norme, cparse, ctype, cpcomment, ...)

12/11/2005
- mod : emacs
- mod : ct-save-ctafconf
- mod : install
- mod : new repo svn: noshell.info

22/10/2005
- add : emacs: htmlize.el (export code with color to html), tiger.el