@@ -1,0 +1,21 @@
+#!/bin/sh
+## ct-save-ctafconf for ctafconf in /home/ctaf/.ctafconf
+##
+## Made by GESTES Cedric
+## Login   <ctaf@epita.fr>
+##
+## Started on  Tue Oct  4 03:04:18 2005 GESTES Cedric
+## Last update Thu Mar 23 05:28:45 2006 GESTES Cedric
+##
+#CTAFCONF
+
+if [ $# -gt 0 ]
+then
+wallpp=$1
+else
+wallpp=1
+fi
+
+echo "add wallpaper $wallpp"
+echo "to use it launch ct-profile, and set the wallpaper to what you want"
+cp $wallpp ~/.ctafconf/perso/wallpaper/
