@@ -1,12 +1,0 @@
-[Desktop Entry]
-Encoding=UTF-8
-Version=1.0
-Type=Application
-Exec=sudo synaptic
-TryExec=
-Icon=/usr/share/pixmaps/synaptic.png
-X-GNOME-DocPath=
-Terminal=false
-Name[en_GB]=synaptic
-GenericName[en_GB]=synaptic
-Comment[en_GB]=
